--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
+
+spring.flyway.url=jdbc:mysql://localhost:3306/
+spring.flyway.schemas=rest_with_spring_boot_udemy
+spring.flyway.user=root
+spring.flyway.password=12345
