--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,10 @@ spring.flyway.url=jdbc:mysql://localhost:3306/
 spring.flyway.schemas=rest_with_spring_boot_udemy
 spring.flyway.user=root
 spring.flyway.password=12345
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=215MB
+
+file.upload-dir=/home/leonardo/Course/RestWithSpringBootUdemy/UploadFiles
