--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/rest_with_spring_boot_udemy?useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3308/rest_with_spring_boot_udemy?useTimezone=true&serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=docker
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
-spring.flyway.url=jdbc:mysql://localhost:3306/
+spring.flyway.url=jdbc:mysql://localhost:3308/
 spring.flyway.schemas=rest_with_spring_boot_udemy
 spring.flyway.user=root
-spring.flyway.password=12345
+spring.flyway.password=docker
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2KB
