--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3308/rest_with_spring_boot_udemy?useTimezone=true&serverTimezone=UTC&useSSL=false
+spring.datasource.url=jdbc:mysql://db:3306/rest_with_spring_boot_udemy?useTimezone=true&serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=docker
 
@@ -8,7 +8,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
-spring.flyway.url=jdbc:mysql://localhost:3308/
+spring.flyway.url=jdbc:mysql://db:3306/
 spring.flyway.schemas=rest_with_spring_boot_udemy
 spring.flyway.user=root
 spring.flyway.password=docker
