--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@ services: docker
 script:
   - docker-compose build
 before_deploy:
-  - docker login --username "${DOCKER_USERNAME}" --password "${DOCKER_PASSWORD}"
+  - echo "${DOCKER_PASSWORD}" | docker login --username "${DOCKER_USERNAME}" --password-stdin
 deploy:
   provider: script
   script: 
-    docker push leonardograselalmeida/mysql-rest-with-spring-boot-udemy
-    docker push leonardograselalmeida/rest-with-spring-boot-udemy
+    docker push leonardograselalmeida/mysql-rest-with-spring-boot-udemy;
+    docker push leonardograselalmeida/rest-with-spring-boot-udemy;
   on:
     branch: master
 notifications:
