--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,9 @@
-version: '3.4'
+version: "3.4"
 services:
   db:
-    image: leonardograselalmeida/mysql-rest-with-spring-boot-udemy
+    image: mysql:8.0.22
     command: mysqld --default-authentication-plugin=mysql_native_password
     restart: always
-    build:
-      context: .
-      dockerfile: Dockerfile.db
     environment:
       TZ: America/Sao_Paulo
       MYSQL_ROOT_PASSWORD: docker
@@ -18,17 +15,14 @@ services:
     networks:
       - udemy-network
   rest-with-spring-boot-udemy:
-    image: leonardograselalmeida/rest-with-spring-boot-udemy
+    image: maven:3.6.1-jdk-11-slim
     restart: always
-    build:
-      context: .
-      dockerfile: Dockerfile.api
     working_dir: /RestWithSpringBootUdemy
     environment:
       TZ: America/Sao_Paulo
       SPRING_BOOT_ENVIRONMENT: Production
     volumes:
-      - .:/RestWithSpringBootUdemy
+      - ./server:/RestWithSpringBootUdemy
       - ~/.m2:/root/.m2
     ports:
       - "8080:8080"
@@ -40,5 +34,5 @@ services:
     networks:
       - udemy-network
 networks:
-    udemy-network:
-        driver: bridge
+  udemy-network:
+    driver: bridge
