--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -18,4 +18,4 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=215MB
 
-file.upload-dir=/home/leonardo/Course/RestWithSpringBootUdemy/UploadFiles
+file.upload-dir=./UploadFiles
